Ensure hero is full height on mobile

--- a/src/components/layout/Header/HeroGrid/HeroGrid.module.scss
+++ b/src/components/layout/Header/HeroGrid/HeroGrid.module.scss
@@ -12,13 +12,17 @@
   z-index: -1;
 }
 
+.bgWrap > img {
+  height: 100vh;
+}
+
 .bgWrap::after {
   content: "";
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: inline-block;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
 }
